examples/echoserver/echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: default
spec:
  # type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: echoserver
