examples/echoserver/echoserver-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: default
spec:
  rules:
  - host: www.mixslice.com
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echoserver
          servicePort: 80
